<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    android:onClick="@string/salvar"
    tools:context=".Cadastro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="126dp"
                android:layout_margin="12dp"
                android:background="@color/txtbtn"
                android:contentDescription="@string/imgMphone"
                app:srcCompat="@drawable/mktphoneview" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:fontFamily="@font/michroma"
                android:text="@string/cadastre_se_aqui"
                android:textAlignment="center"
                android:textColor="@color/titulo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:ems="10"
                android:fontFamily="@font/michroma"
                android:hint="@string/e_mail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/michroma"
                android:hint="@string/nome"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtFone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:ems="10"
                android:fontFamily="@font/michroma"
                android:hint="@string/telefone"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtEnde"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:layout_margin="12dp"
                android:ems="10"
                android:fontFamily="@font/michroma"
                android:gravity="start|top"
                android:hint="@string/endereco"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtCep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:ems="10"
                android:fontFamily="@font/michroma"
                android:hint="@string/cep"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:ems="10"
                android:fontFamily="@font/michroma"
                android:hint="@string/senha"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edtRep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:ems="10"
                android:fontFamily="@font/michroma"
                android:hint="@string/repita_sua_senha"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnSalvar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@color/hint"
                android:fontFamily="@font/michroma"
                android:text="@string/salvar"
                android:textColor="@color/txtbtn"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>